# burkut-sim

./: .gitignore  README.md  colcon_defaults.yaml  pyrightconfig.json
.github/workflows/: ci.yml
src/burkut_aero/: CMakeLists.txt  package.xml
src/burkut_aero/src/: morphingPlugin.cc
src/burkut_bringup/: CMakeLists.txt  package.xml
src/burkut_bringup/arayuz/: arayuz.py
src/burkut_bringup/launch/: burkut_test.launch.xml  main.launch.xml
src/burkut_control/: package.xml  setup.cfg  setup.py
src/burkut_control/burkut_control/: flight_cont.py  interface.py
src/burkut_control/burkut_control/states/: land.py  navigation.py  takeoff.py
src/burkut_description/: CMakeLists.txt  package.xml
src/burkut_description/models/BURKUT_montaj/: model.config  model.sdf
src/burkut_description/models/Gemini_2L/: model.config  model.sdf
src/burkut_description/models/advanced_plane/: model.sdf
src/burkut_description/models/basic_camera/: model.config  model.sdf
src/burkut_description/models/burkut_test/: model.config  model.sdf
src/burkut_msgs/: CMakeLists.txt  package.xml
src/burkut_msgs/msg/: Obstacle.msg  ObstacleArray.msg  Waypoint.msg  WaypointArray.msg
src/burkut_perception/: package.xml  setup.cfg  setup.py
src/burkut_perception/burkut_perception/: pole_ai_test.py
src/burkut_planning/: package.xml  setup.cfg  setup.py
src/burkut_planning/burkut_planning/: planning_test.py
src/burkut_worlds/: CMakeLists.txt  package.xml
src/burkut_worlds/worlds/: test.sdf
tools/: activate.sh  check_health.sh  dump_runtime.sh  run_sim.sh  setup_env.sh
(+13 files in other folders)
